# less

./: CMakeLists.txt  README.md
benchmarks/: BoardBenchmark.cc  CMakeLists.txt  RunStrategyBenchmark.cc  main.cc
player/: Board.cc  Board.h  CMakeLists.txt  Common.h  Conversion.cc  Conversion.h  ExpectMinMaxStrategy.cc  ExpectMinMaxStrategy.h  MCTSStrategy.cc  MCTSStrategy.h  Node.cc  Node.h  RandomNumberGenerator.cc  RandomNumberGenerator.h  RandomStrategy.cc  RandomStrategy.h  RunStrategy.cc  RunStrategy.h  Strategy.h  Submission.cc  Timer.cc  Timer.h  TranspositionTable.cc  TranspositionTable.h  main.cc
tests/: BoardHorizontalWallNegativeTest.cc  BoardHorizontalWallPositiveTest.cc  BoardNilMoveTest.cc  BoardTestBase.cc  BoardTestBase.h  BoardVerticalWallNegativeTest.cc  BoardVerticalWallPositiveTest.cc  CMakeLists.txt  main.cc
